# rvbinfit

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
data/example/01_skinner/: 2M06115599.tsv
data/example/02_gj3861/: GJ_3861_rv_bin.csv  gj3861.txt  gj3861_2.txt  gj3861_5.8d.txt  gj3861_circ.txt  gj3861_ecc_jitter.txt  gj3861_ecc_jitter_alias1.txt  gj3861_ecc_jitter_alias2.txt
data/example/03_fernandez/: paspaa77e0t1.csv
notebooks/david_workspace/: 20250402_01_example_running_GJ3861_binary.ipynb  readme.md  test.ipynb
notebooks/gks_workspace/: 20250402_01_example_running_GJ3861_binary.ipynb  readme.md
src/: __init__.py  rvbinfit.py
src/rvbinfit/: __init__.py  mcmc_help.py  rvbinfit.py  stats_help.py
